# Tender-Insight-Hub

./: # Tender Insight Hub - API Guide.md  # Tender Insight Hub - Troubleshooting G.md  #Tender Insight Hub init.py  .env.example  .gitignore  Dockerfile  LICENSE  README.md  Tender Insight Hub - User Manual.md  Tender Insight Hub - redis_client.py  Tender Insight Hub mongo_client.py  Tender Insight Hub mysql_engine.py  Tender Insight Hub sql_model.py  Troubleshoouting Guide  apiendpoint.py  docker-compose.yml  integration_strategy.md  main  mongo_models.py  pyproject.toml  requirements.txt  router_api
Academic/: NSED742-submission.md  assignment-context.md  evaluation-criteria.md
ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
Project management /: project Charter  project-timeline.md  requirements-specification.md  risk-register.md  team-roles.md
api/: __init__.py
api/v1/: __init__.py
api/v1/endpoints/: __init__.py  analytics.py  auth.py  tenders.py  users.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/models/: workspace.py
app/routers/: tenders.py  workspaces.py
app/schemas/: workspace.py
architecture/: api-specifications.md  database-design.md  deployment-architecture.md  integration-plan.md  system-architecture.md
core/: __init__.py  config.py  settings.py
development/: coding-standards.md  deployment-guide.md  setup-guide.md  testing-strategy.md
docs/: README.md  WORKSPACES.md
github/: pull_request_template.md
github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
github/workflows/: cd.yml  ci.yml  tests.yml
phase 2/: JWT_RBAC_FILES.md  README.md  SETUP_GUIDE.md  demo_server.py  requirements.txt  simple_test.py
phase 2/backend/: config.py  crud.py  database.py  enhanced_auth.py  models.py  schemas.py
phase 2/frontend/: dashboard.html  dashboard.js  index.html  script.js  styles.css
profile_setup/: README.md  RUNNING_THE_SYSTEM.md  SYSTEM_OVERVIEW.md  config.py  database_schema.sql  db_models.py  profile_db.sql  profiles.py  requirements.txt  scoring_services.py  setup.py  test_system.py  user_profile.py
profile_setup/backend/: app.py
profile_setup/frontend/: app.js  index.html
scripts/: deploy.py  migrate.py  seed_data.py  setup_db.py
services/: __init__.py  ai_service.py  analytics_service.py  auth_service.py  etender_service.py
tests/: conftest.py  init.py  test_tenders.py  test_workspaces.py
utils/: __init__.py  helpers.py  validators.py
